// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`styled DOM contract baseline > renders the frozen structure when disabled 1`] = `
"div.react-table-mapping
  div.mapping-container
    div.source-table
      div.source-table-header
        div.source-table-header-container
          div.source-table-header-cell
          div.source-table-header-cell
      div.source-table-body
        div.source-table-row-container
          div.source-table-row
            div.custom-cell-text
            div.custom-cell-select
              button.mapping-table-select-trigger
                span
                svg.lucide.lucide-chevron-down
                  path
            div.connector.source-connector#connector-source-source-1@connector-source-source-1
        div.source-table-row-container
          div.source-table-row
            div.custom-cell-input
              div.mapping-table-input-container
                input.mapping-table-input
            div.custom-cell-select
              button.mapping-table-select-trigger
                span
                svg.lucide.lucide-chevron-down
                  path
            div.connector.source-connector#connector-source-source-2@connector-source-source-2
    svg.mapping-svg
      defs
        marker#arrowhead-normal
          path
        marker#arrowhead-hover
          path
    div.target-table
      div.target-table-header
        div.target-table-header-container
          div.target-table-header-cell
          div.target-table-header-cell
      div.target-table-body
        div.target-table-row-container
          div.target-table-row
            div.custom-cell-text
            div.custom-cell-select
              button.mapping-table-select-trigger
                span
                svg.lucide.lucide-chevron-down
                  path
            div.connector.target-connector#connector-target-target-1@connector-target-target-1
        div.target-table-row-container
          div.target-table-row
            div.custom-cell-input
              div.mapping-table-input-container
                input.mapping-table-input
            div.custom-cell-select
              button.mapping-table-select-trigger
                span
                svg.lucide.lucide-chevron-down
                  path
            div.connector.target-connector#connector-target-target-2@connector-target-target-2"
`;

exports[`styled DOM contract baseline > renders the frozen structure with mappings drawn 1`] = `
"div.react-table-mapping
  div.mapping-container
    div.source-table
      div.source-table-header
        div.source-table-header-container
          div
          div.source-table-header-cell
          div.source-table-header-cell
      div.source-table-body
        div.source-table-row-container
          button.mapping-button.mapping-button.mapping-button--icon.mapping-button--outline
            svg.lucide.lucide-minus
              path
          div.source-table-row
            div.custom-cell-text
            div.custom-cell-select
              button.mapping-table-select-trigger
                span
                svg.lucide.lucide-chevron-down
                  path
            div.connector.source-connector#connector-source-source-1@connector-source-source-1
        div.source-table-row-container
          button.mapping-button.mapping-button.mapping-button--icon.mapping-button--outline
            svg.lucide.lucide-minus
              path
          div.source-table-row
            div.custom-cell-input
              div.mapping-table-input-container
                input.mapping-table-input
            div.custom-cell-select
              button.mapping-table-select-trigger
                span
                svg.lucide.lucide-chevron-down
                  path
            div.connector.source-connector#connector-source-source-2@connector-source-source-2
    svg.mapping-svg
      g.mapping-line-group@mapping-line-mapping-source-1-target-2
        path.line-base
        path.hover-area
      defs
        marker#arrowhead-normal
          path
        marker#arrowhead-hover
          path
    div.target-table
      div.target-table-header
        div.target-table-header-container
          div.target-table-header-cell
          div.target-table-header-cell
          div
      div.target-table-body
        div.target-table-row-container
          div.target-table-row
            div.custom-cell-text
            div.custom-cell-select
              button.mapping-table-select-trigger
                span
                svg.lucide.lucide-chevron-down
                  path
            div.connector.target-connector#connector-target-target-1@connector-target-target-1
          button.mapping-button.mapping-button.mapping-button--icon.mapping-button--outline
            svg.lucide.lucide-minus
              path
        div.target-table-row-container
          div.target-table-row
            div.custom-cell-input
              div.mapping-table-input-container
                input.mapping-table-input
            div.custom-cell-select
              button.mapping-table-select-trigger
                span
                svg.lucide.lucide-chevron-down
                  path
            div.connector.target-connector#connector-target-target-2@connector-target-target-2
          button.mapping-button.mapping-button.mapping-button--icon.mapping-button--outline
            svg.lucide.lucide-minus
              path"
`;

exports[`styled DOM contract baseline > renders the frozen structure with no data 1`] = `
"div.react-table-mapping
  div.mapping-container
    div.source-table
      div.source-table-header
        div.source-table-header-container
          div.source-table-header-cell
          div.source-table-header-cell
      div.source-table-body
        div.no-data-container
          svg.lucide.lucide-file-text
            path
            path
            path
            path
            path
          span
    svg.mapping-svg
      defs
        marker#arrowhead-normal
          path
        marker#arrowhead-hover
          path
    div.target-table
      div.target-table-header
        div.target-table-header-container
          div.target-table-header-cell
          div.target-table-header-cell
      div.target-table-body
        div.no-data-container
          svg.lucide.lucide-file-text
            path
            path
            path
            path
            path
          span"
`;
